--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,11 @@
   <title>HRMS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <base href="/" />
-
   <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
 
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    rel="stylesheet"
-  />
-
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
   <link rel="stylesheet" href="/assets/css/style.css?v=1.0" />
   <link rel="stylesheet" href="/assets/css/sidebar.css?v=1.0" />
@@ -42,7 +30,13 @@
       background: #1f2937;
       color: #fff;
       z-index: 1000;
-      overflow-y: auto; /* Added for small screens/long menus */
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .bottom-link {
+      margin-top: auto;
     }
 
     .sidebar h5 {
@@ -58,7 +52,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      transition: background 0.2s, color 0.2s; /* Smooth hover */
+      transition: background 0.2s, color 0.2s;
     }
 
     .sidebar a:hover,
@@ -91,101 +85,70 @@
 
 <body>
 
+<!-- SIDEBAR -->
 <div class="sidebar">
   <h5 class="sidebar-brand">
     <i class="bi bi-building me-2"></i>
     <span class="brand-text">LovasIT HRMS</span>
   </h5>
 
-  <a href="#/home" data-route="home" data-title="Home">
-    <i class="bi bi-house"></i><span>Home</span>
-  </a>
+  <a href="#/home" data-route="home"><i class="bi bi-house"></i><span>Home</span></a>
+  <a href="#/me" data-route="me"><i class="bi bi-person"></i><span>Me</span></a>
+  <a href="#/team" data-route="team"><i class="bi bi-people"></i><span>My Team</span></a>
+  <a href="#/attendance" data-route="attendance"><i class="bi bi-clock"></i><span>Attendance</span></a>
+  <a href="#/timesheets" data-route="timesheets"><i class="bi bi-clock-history"></i><span>Time Management</span></a>
+  <a href="#/leaves" data-route="leaves"><i class="bi bi-calendar-event"></i><span>Leaves</span></a>
+  <a href="#/payroll" data-route="payroll"><i class="bi bi-receipt"></i><span>Payroll</span></a>
+  <a href="#/analytics" data-route="analytics"><i class="bi bi-bar-chart"></i><span>Analytics</span></a>
+  <a href="#/manage-users" data-route="manage-users"><i class="bi bi-people-fill"></i><span>Manage Users</span></a>
 
-  <a href="#/me" data-route="me" data-title="Me">
-    <i class="bi bi-person"></i><span>Me</span>
-  </a>
-
-  <a href="#/team" data-route="team" data-title="My Team">
-    <i class="bi bi-people"></i><span>My Team</span>
-  </a>
-
-  <a href="#/attendance" data-route="attendance" data-title="Attendance">
-    <i class="bi bi-clock"></i><span>Attendance</span>
-  </a>
-
-  <a href="#/timesheets" data-route="timesheets" data-title="Time Management">
-    <i class="bi bi-clock-history"></i><span>Time Management</span>
-  </a>
-
-  <a href="#/leaves" data-route="leaves" data-title="Leaves">
-    <i class="bi bi-calendar-event"></i><span>Leaves</span>
-  </a>
-
-  <a href="#/payroll" data-route="payroll" data-title="Payroll">
-    <i class="bi bi-receipt"></i><span>Payroll</span>
-  </a>
-
-  <a href="#/analytics" data-route="analytics" data-title="Analytics">
-    <i class="bi bi-bar-chart"></i><span>Analytics</span>
-  </a>
-
-  <a href="#/manage-users" data-route="manage-users" data-title="Manage Users">
-    <i class="bi bi-people-fill"></i><span>Manage Users</span>
+  <a href="#/service-request" class="bottom-link" data-route="service-request">
+    <i class="bi bi-headset"></i><span>Service Request</span>
   </a>
 </div>
 
+<!-- MAIN CONTENT -->
 <div class="main">
 
+  <!-- TOPBAR -->
   <div class="topbar">
-    <button
-      id="sidebarToggle"
-      class="btn btn-link text-white p-0 sidebar-toggle"
-      style="font-size: 1.5rem;"
-      aria-label="Toggle sidebar"
-    >
+    <button id="sidebarToggle" class="btn btn-link text-white p-0" style="font-size: 1.5rem;">
       <i class="bi bi-list"></i>
     </button>
 
-    <input
-      id="globalSearch"
-      class="form-control w-50"
-      placeholder="Search"
-      aria-label="Global search"
-    >
+    <input id="globalSearch" class="form-control w-50" placeholder="Search">
 
     <div class="ms-auto d-flex align-items-center gap-3">
 
+      <!-- Notifications -->
       <div class="dropdown">
-        <button
-          id="notificationToggle"
-          class="btn btn-link position-relative dropdown-toggle text-white text-decoration-none"
-          type="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <i id="notificationBell" class="bi bi-bell-fill fs-5"></i>
-          <span
-            id="notificationBadge"
-            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none"
-            style="font-size: 0.6rem;"
-          >0</span>
+        <button class="btn btn-link position-relative dropdown-toggle text-white text-decoration-none"
+                data-bs-toggle="dropdown">
+          <i class="bi bi-bell-fill fs-5"></i>
+          <span id="notificationBadge"
+                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none"
+                style="font-size: 0.6rem;">0</span>
         </button>
 
-        <div class="dropdown-menu dropdown-menu-end p-0 shadow border-0" style="width:320px; overflow:hidden;">
-          <h6 class="dropdown-header bg-light border-bottom py-2 fw-bold">Notifications</h6>
+        <div class="dropdown-menu dropdown-menu-end p-0 shadow border-0" style="width:320px;">
+          <div class="d-flex justify-content-between align-items-center px-3 py-2 border-bottom bg-light">
+  <h6 class="mb-0 fw-bold">Notifications</h6>
+<button id="markAllBtn" class="btn btn-outline-primary btn-sm" onclick="markAllNotificationsRead()">
+  Mark All
+</button>
+</div>
           <div id="notificationList" style="max-height: 300px; overflow-y: auto;">
             <div class="text-center text-muted p-3"><small>Loading…</small></div>
           </div>
         </div>
       </div>
 
+      <!-- User -->
       <div class="dropdown">
-        <span
-          id="userName"
-          class="fw-semibold dropdown-toggle d-flex align-items-center gap-2"
-          data-bs-toggle="dropdown"
-          style="cursor:pointer"
-        >
+        <span id="userName"
+              class="fw-semibold dropdown-toggle d-flex align-items-center gap-2"
+              data-bs-toggle="dropdown"
+              style="cursor:pointer">
           <i class="bi bi-person-circle fs-5"></i>
           <span>User</span>
         </span>
@@ -196,48 +159,34 @@
             <div class="small text-muted" id="profileRole">ROLE</div>
           </li>
           <li><hr class="dropdown-divider"></li>
-          <li>
-            <a class="dropdown-item" href="#/me">
-              <i class="bi bi-person me-2"></i>My Profile
-            </a>
-          </li>
-          <li>
-            <a class="dropdown-item text-danger" href="#" data-action="logout">
-              <i class="bi bi-box-arrow-right me-2"></i>Logout
-            </a>
-          </li>
+          <li><a class="dropdown-item" href="#/me"><i class="bi bi-person me-2"></i>My Profile</a></li>
+          <li><a class="dropdown-item text-danger" href="#" data-action="logout">
+              <i class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
         </ul>
       </div>
 
     </div>
   </div>
 
-  <div id="page-content" class="container-fluid mt-4 pb-5" data-spa-root></div>
+  <div id="page-content" class="container-fluid mt-4 pb-5"></div>
 </div>
 
-<div class="toast-container position-fixed bottom-0 end-0 p-3" id="toastContainer" style="z-index: 1100;"></div>
+<div class="toast-container position-fixed bottom-0 end-0 p-3" id="toastContainer"></div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-
 <script src="/assets/js/api.js?v=1.0" defer></script>
 <script src="/assets/js/auth.js?v=1.0" defer></script>
-
 <script src="/assets/js/core/spa-page.js?v=1.0" defer></script>
 <script src="/assets/js/core/permissions.js?v=1.0" defer></script>
-
 <script src="/assets/js/ui/modal.js?v=1.0" defer></script>
 <script src="/assets/js/ui/toast.js?v=1.0" defer></script>
-
 <script src="/assets/js/websocket.js?v=1.0" defer></script>
 <script src="/assets/js/notifications.js?v=1.0" defer></script>
-
 <script src="/assets/js/router.js?v=1.0" defer></script>
 <script src="/assets/js/sidebar.js?v=1.0" defer></script>
-
 
 </body>
 </html>
