--- a/public/pages/manage-users.html
+++ b/public/pages/manage-users.html
@@ -161,6 +161,10 @@
                         <label class="form-label small">Work Email <span class="text-danger">*</span></label>
                         <input type="email" id="email" name="email" class="form-control" placeholder="jane@company.com" autocomplete="email">
                     </div>
+                    <div class="col-md-6">
+    <label class="form-label small">Phone Number</label>
+    <input type="tel" id="phone" name="phone" class="form-control" placeholder="e.g. +91 9876543210" autocomplete="tel">
+</div>
                     <div class="col-md-12">
                         <label class="form-label small">Temporary Password <span class="text-danger">*</span></label>
                         <div class="input-group">
@@ -291,6 +295,10 @@
                 <label class="form-label small">Email Address</label>
                 <input id="edit-email" class="form-control">
             </div>
+<div class="col-12">
+    <label class="form-label small">Phone Number</label>
+    <input type="tel" id="edit-phone" class="form-control">
+</div>
             
             <div class="col-md-6">
                 <label class="form-label small">Role</label>
@@ -337,7 +345,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/pages/manage-users.js"></script>
+<script src="/assets/js/pages/manage-users.js?v=999"></script>
 
 <script>
     window.addEventListener('load', function() {
