--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -34,12 +34,18 @@
   <div class="row mb-4">
     <div class="col-md-6 mb-3 mb-md-0">
       <div id="holidayCard" class="card p-4 text-white h-100 shadow-sm border-0 custom-radius"
-           style="background:#ef4444;">
-        <h5 class="opacity-75">Nearest Holiday</h5>
+           style="background:#ffffff;"
+        <h5 class="text-muted">Nearest Holiday</h5>
         <div class="mt-3">
-          <h2 id="holidayName" class="fw-bold mb-1">Loading...</h2>
-          <p id="holidayDate" class="fs-5 opacity-90 mb-0">Please wait</p>
-        </div>
+          <h2 id="holidayName" class="fw-bold mb-1 text-dark">Loading...</h2>
+<p id="holidayDate" class="fs-5 text-muted mb-0">Please wait</p>
+    </div>
+
+ <div>
+    <img id="nearestHolidayImage"
+         src="/assets/images/default-holiday.png"
+         style="width:100px; height:auto;">
+  </div>
       </div>
     </div>
 
