--- a/public/pages/manage-users.html
+++ b/public/pages/manage-users.html
@@ -165,7 +165,15 @@
     <label class="form-label small">Phone Number</label>
     <input type="tel" id="phone" name="phone" class="form-control" placeholder="e.g. +91 9876543210" autocomplete="tel">
 </div>
-                    <div class="col-md-12">
+
+<div class="col-md-6">
+  <label>Employee Code *</label>
+  <input type="text"
+         class="form-control"
+         name="emp_code"
+         placeholder="e.g. EMP001"
+         required>
+</div>                    <div class="col-md-12">
                         <label class="form-label small">Temporary Password <span class="text-danger">*</span></label>
                         <div class="input-group">
                             <span class="input-group-text bg-light border-end-0"><i class="fa fa-lock text-muted"></i></span>
@@ -299,6 +307,13 @@
     <label class="form-label small">Phone Number</label>
     <input type="tel" id="edit-phone" class="form-control">
 </div>
+<div class="col-md-6">
+    <label>Employee Code</label>
+    <input type="text"
+       id="edit-emp-code"
+           name="emp_code"
+           placeholder="e.g. EMP001">
+  </div>
             
             <div class="col-md-6">
                 <label class="form-label small">Role</label>
