--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+    // Do this first!
+    window.console.log = function() {};
+    window.console.info = function() {};
+    window.console.warn = function() {};
+    // Keep error visible so you know if the site breaks
+  </script>
+  <script src="your-main-app.js"></script>
+</head>
+
+<head>
   <meta charset="UTF-8" />
   <title>HRMS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
